rewrite Slideshow and remove Image

--- a/UI/Pages/Items/Harmony/_Harmony.html
+++ b/UI/Pages/Items/Harmony/_Harmony.html
@@ -1,7 +1,7 @@
 <header class="section section--primary section--centered">
     <div class="content layout__column layout__column--ignoreMobile layout--small">
         <div class="section__title">
-            <img src="assets/projects/harmony/logo.svg" class="section__logo" width="200px" alt="Harmony Logo">
+            <img src="assets/projects/harmony/logo.svg" class="section__logo" width="200px" alt="Harmony Logo" loading="lazy">
         </div>
         <h2 class="section__subtitle">An E-Commerce platform for the modern music industry</h2>
         <h3>This project is the outcome of <a href="https://www.iweb.co.uk/">iWeb</a>'s client briefing during an
@@ -15,7 +15,9 @@
             the different stages in the
             lifecycle of a project and its development - along with the client and our project supervisor, we
             agreed so that we would follow the steps outlined below:</p>
-        <div class="section__image" data-bind="component: koComponents.images.process"></div>
+            <div class="section__image">
+                <img class="image no-shadow" src="/assets/projects/harmony/process.webp" loading="lazy">
+            </div>
         <p>Surrounding each of these stages we maintained communication both within our team, as well as with
             our project supervisor and the client.</p>
         <p>We implemented an iterative approach to the process which allowed us to all to air our opinions and
@@ -26,7 +28,12 @@
 <section class="section section--centered">
     <div class="content layout layout__column">
         <span class="section__title">Initial Designs</span>
-        <div class="section__image" data-bind="component: koComponents.images.initialDesigns"></div>
+        <div class="section__image" data-bind="click: showInitialDesignsSlideshow">
+            <img class="image" src="/assets/projects/harmony/initial-designs.webp" loading="lazy">
+            <span class="image__action"></span>
+            <span class="image__action-text"></span>
+        </div>
+        <div data-bind="component: koComponents.slideshows.initialDesigns"></div>
         <p class="section__subtitle">These wireframe designs were received very well by the client and were
             praised for them looking and
             feeling like something that could be implemented into a real and professional looking product that
@@ -40,7 +47,12 @@
     <div class="content layout layout__column layout--small">
         <div class="layout layout__row layout__row--equal">
             <div>
-                <div class="section__image" data-bind="component: koComponents.images.prototype"></div>
+                <div class="section__image" data-bind="click: showPrototypeSlideshow">
+                    <img class="image" src="/assets/projects/harmony/prototype-ui.webp" loading="lazy">
+                    <span class="image__action"></span>
+                    <span class="image__action-text"></span>
+                </div>
+                <div data-bind="component: koComponents.slideshows.prototype"></div>
             </div>
             <div class="layout layout__column layout--small">
                 <span class="section__title">UI/UX Prototype</span>
@@ -85,7 +97,12 @@
     <div class="content layout layout__column layout--small">
         <span class="section__title">Final Product</span>
         <a href="https://harmony.aylo.net/"><span class="section__subtitle">View Here</span></a>
-        <div class="section__image" data-bind="component: koComponents.images.final"></div>
+        <div class="section__image" data-bind="click: showFinalSlideshow">
+            <img class="image" src="/assets/projects/harmony/final-product-1.webp" loading="lazy">
+            <span class="image__action"></span>
+            <span class="image__action-text"></span>
+        </div>
+        <div data-bind="component: koComponents.slideshows.final"></div>
         <p>Ultimately, this project received a grade of 96% (1st), which is accredible in no small part to the
             great team that we had - our attitudes to succeed and the love and passion that we all had for the
             project was noted by the client who congratulated us on creating a project that functions the way
