--- a/UI/Pages/Items/Home/_Home.html
+++ b/UI/Pages/Items/Home/_Home.html
@@ -2,14 +2,10 @@
     <div class="harmony layout__column--double" data-bind="click: setContent.bind($data, 'harmony')">
         <article class="portfolio-card">
             <div class="portfolio-card__title">
-                <img class="portfolio-card__title-logo" src="/assets/projects/harmony/logo.svg" width="195" height="55"
-                    alt="Harmony Logo">
-                <div class="portfolio-card__title-description">An E-Commerce platform for a modern music store
-                </div>
+                <div class="portfolio-card__title-logo"></div>
+                <div class="portfolio-card__title-description"></div>
             </div>
-            <div class="portfolio-card__chip">
-                Backend
-            </div>
+            <div class="portfolio-card__chip"></div>
             <div class="portfolio-card__action"></div>
             <span class="portfolio-card__action-text"></span>
         </article>
@@ -17,29 +13,23 @@
     <div class="pinewood" data-bind="click: setContent.bind($data, 'pinewood')">
         <article class="portfolio-card">
             <div class="portfolio-card__title">
-                <img class="portfolio-card__title-logo" src="/assets/projects/pinewood/logo.svg" width="195" height="55"
-                    alt="Pinewood Logo">
-                <div class="portfolio-card__title-description">Software Development Placement</div>
+                <div class="portfolio-card__title-logo"></div>
+                <div class="portfolio-card__title-description"></div>
             </div>
-            <div class="portfolio-card__chip">
-                Internship
-            </div>
+            <div class="portfolio-card__chip"></div>
             <div class="portfolio-card__action"></div>
             <span class="portfolio-card__action-text"></span>
         </article>
     </div>
 </section>
-<section class="layout__row">
+<section class="layout__row layout__row--equal">
     <div class="experimentalImagery" data-bind="click: setContent.bind($data, 'experimentalImagery')">
         <article class="portfolio-card">
             <div class="portfolio-card__title">
-                <img class="portfolio-card__title-logo" src="/assets/projects/experimentalimagery/logo.svg" width="240"
-                    height="55" alt="Experimental Imagery">
-                <div class="portfolio-card__title-description">A-Level Photography Component One</div>
+                <div class="portfolio-card__title-logo"></div>
+                <div class="portfolio-card__title-description"></div>
             </div>
-            <div class="portfolio-card__chip">
-                Photography
-            </div>
+            <div class="portfolio-card__chip"></div>
             <div class="portfolio-card__action"></div>
             <span class="portfolio-card__action-text"></span>
         </article>
@@ -47,13 +37,10 @@
     <div class="partsAndSections" data-bind="click: setContent.bind($data, 'partsAndSections')">
         <article class="portfolio-card">
             <div class="portfolio-card__title">
-                <img class="portfolio-card__title-logo" src="/assets/projects/partsandsections/logo.svg" width="240" height="55"
-                    alt="Parts and Sections">
-                <div class="portfolio-card__title-description">A-Level Photography Component Two</div>
+                <div class="portfolio-card__title-logo"></div>
+                <div class="portfolio-card__title-description"></div>
             </div>
-            <div class="portfolio-card__chip">
-                Photography
-            </div>
+            <div class="portfolio-card__chip"></div>
             <div class="portfolio-card__action"></div>
             <span class="portfolio-card__action-text"></span>
         </article>
