--- a/UI/Pages/Items/ExperimentalImagery/_ExperimentalImagery.html
+++ b/UI/Pages/Items/ExperimentalImagery/_ExperimentalImagery.html
@@ -2,7 +2,7 @@
     <div class="content layout__column layout__column--ignoreMobile layout--small">
         <div class="section__title">
             <img src="/assets/projects/experimentalimagery/logo.svg" class="section__logo" width="300px"
-                alt="experimentalImagery">
+                alt="experimentalImagery" loading="lazy">
         </div>
         <h2 class="section__subtitle">A-Level Photography Component One - Marked at Grade A</h2>
     </div>
@@ -48,12 +48,13 @@
     <div class="content layout layout__column">
         <span class="section__title">Initial Outcomes</span>
         <div class="layout layout__row layout__row--equal section__image" data-bind="click: showHandsSlideshow">
-            <img class="image" src="/assets/projects/experimentalimagery/Hands_1.webp">
-            <img class="image" src="/assets/projects/experimentalimagery/Hands_2.webp">
-            <img class="image" src="/assets/projects/experimentalimagery/Hands_3.webp">
+            <img class="image" src="/assets/projects/experimentalimagery/Hands_1.webp" loading="lazy">
+            <img class="image" src="/assets/projects/experimentalimagery/Hands_2.webp" loading="lazy">
+            <img class="image" src="/assets/projects/experimentalimagery/Hands_3.webp" loading="lazy">
             <span class="image__action"></span>
             <span class="image__action-text"></span>
         </div>
+        <div data-bind="component: koComponents.slideshows.hands"></div>
     </div>
 </section>
 <section class="section section--secondary">
@@ -65,8 +66,12 @@
             facial features of the person but could see the rest in a ‘broken world’. The result of this can be seen
             below:
         </p>
-        <div class="section__image" data-bind="component: koComponents.images.colours">
+        <div class="section__image" data-bind="click: showColoursSlideshow">
+            <img class="image" src="/assets/projects/experimentalimagery/Colours.webp" loading="lazy">
+            <span class="image__action"></span>
+            <span class="image__action-text"></span>
         </div>
+        <div data-bind="component: koComponents.slideshows.colours"></div>
     </div>
 </section>
 <section class="section section--primary section--centered">
@@ -85,8 +90,8 @@
             these frames to create a looping gif, such as the ones below:
         </p>
         <div class="layout layout__row layout__row--equal section__image">
-            <video src="/assets/projects/experimentalimagery/Motion_1.mp4" class="image" controls loop muted></video>
-            <video src="/assets/projects/experimentalimagery/Motion_2.mp4" class="image" controls loop muted></video>
+            <video src="/assets/projects/experimentalimagery/Motion_1.mp4" class="image" loading="lazy" controls loop muted></video>
+            <video src="/assets/projects/experimentalimagery/Motion_2.mp4" class="image" loading="lazy" controls loop muted></video>
         </div>
     </div>
 </section>
@@ -104,35 +109,41 @@
 <section class="section section--centered">
     <div class="content layout layout__column">
         <span class="section__title">Final Outcomes</span>
-        <div class="layout layout__column layout--nogap layout--small section__image" data-bind="click: showFinalSlideshow">
+        <div class="layout layout__column layout--nogap layout--small" data-bind="click: showFinalSlideshow">
             <div class="layout layout__row layout__row--equal">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_1.webp">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_2.webp">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_3.webp">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_4.webp">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_1.webp" loading="lazy">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_2.webp" loading="lazy">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_3.webp" loading="lazy">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_4.webp" loading="lazy">
             </div>
             <div class="layout layout__row layout__row--equal">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_5.webp">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_6.webp">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_7.webp">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_8.webp">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_5.webp" loading="lazy">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_6.webp" loading="lazy">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_7.webp" loading="lazy">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_8.webp" loading="lazy">
             </div>
             <span class="image__action"></span>
             <span class="image__action-text"></span>
         </div>
+        <div data-bind="component: koComponents.slideshows.final"></div>
     </div>
 </section>
 <section class="section section--secondary section--centered">
     <div class="content layout layout__column">
         <span class="section__title">Final Video</span>
         <div class="section__image">
-            <video src="/assets/projects/experimentalimagery/Final.mp4" class="image" controls></video>
+            <video src="/assets/projects/experimentalimagery/Final.mp4" class="image" loading="lazy" controls></video>
         </div>
     </div>
 </section>
 <section class="section section--primary section--centered">
     <div class="content layout layout__column">
         <span class="section__title">Project Book</span>
-        <div class="section__image" data-bind="component: koComponents.images.book"></div>
+        <div class="section__image" data-bind="click: showBookSlideshow">
+            <img class="image" src="/assets/projects/experimentalimagery/book/Experimental Imagery Final_0.webp" loading="lazy">
+            <span class="image__action"></span>
+            <span class="image__action-text"></span>
+        </div>
+        <div data-bind="component: koComponents.slideshows.book"></div>
     </div>
 </section>
