Async image decoding, and fix back button clickable when hidden, update package

--- a/UI/Pages/Items/ExperimentalImagery/_ExperimentalImagery.html
+++ b/UI/Pages/Items/ExperimentalImagery/_ExperimentalImagery.html
@@ -2,7 +2,7 @@
     <div class="content layout__column layout__column--ignoreMobile layout--small">
         <div class="section__title">
             <img src="/assets/projects/experimentalimagery/logo.svg" class="section__logo" width="300px"
-                alt="experimentalImagery" loading="lazy">
+                alt="experimentalImagery" loading="lazy" decoding="async">
         </div>
         <h2 class="section__subtitle">A-Level Photography Component One - Marked at Grade A</h2>
     </div>
@@ -48,9 +48,9 @@
     <div class="content layout layout__column">
         <span class="section__title">Initial Outcomes</span>
         <div class="layout layout__row layout__row--equal section__image" data-bind="click: showHandsSlideshow">
-            <img class="image" src="/assets/projects/experimentalimagery/Hands_1.webp" loading="lazy">
-            <img class="image" src="/assets/projects/experimentalimagery/Hands_2.webp" loading="lazy">
-            <img class="image" src="/assets/projects/experimentalimagery/Hands_3.webp" loading="lazy">
+            <img class="image" src="/assets/projects/experimentalimagery/Hands_1.webp" loading="lazy" decoding="async">
+            <img class="image" src="/assets/projects/experimentalimagery/Hands_2.webp" loading="lazy" decoding="async">
+            <img class="image" src="/assets/projects/experimentalimagery/Hands_3.webp" loading="lazy" decoding="async">
             <span class="image__action"></span>
             <span class="image__action-text"></span>
         </div>
@@ -67,7 +67,7 @@
             below:
         </p>
         <div class="section__image" data-bind="click: showColoursSlideshow">
-            <img class="image" src="/assets/projects/experimentalimagery/Colours.webp" loading="lazy">
+            <img class="image" src="/assets/projects/experimentalimagery/Colours.webp" loading="lazy" decoding="async">
             <span class="image__action"></span>
             <span class="image__action-text"></span>
         </div>
@@ -90,8 +90,8 @@
             these frames to create a looping gif, such as the ones below:
         </p>
         <div class="layout layout__row layout__row--equal section__image">
-            <video src="/assets/projects/experimentalimagery/Motion_1.mp4" class="image" loading="lazy" controls loop muted></video>
-            <video src="/assets/projects/experimentalimagery/Motion_2.mp4" class="image" loading="lazy" controls loop muted></video>
+            <video src="/assets/projects/experimentalimagery/Motion_1.mp4" class="image" loading="lazy" decoding="async" controls loop muted></video>
+            <video src="/assets/projects/experimentalimagery/Motion_2.mp4" class="image" loading="lazy" decoding="async" controls loop muted></video>
         </div>
     </div>
 </section>
@@ -111,16 +111,16 @@
         <span class="section__title">Final Outcomes</span>
         <div class="layout layout__column layout--nogap layout--small" data-bind="click: showFinalSlideshow">
             <div class="layout layout__row layout__row--equal">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_1.webp" loading="lazy">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_2.webp" loading="lazy">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_3.webp" loading="lazy">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_4.webp" loading="lazy">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_1.webp" loading="lazy" decoding="async">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_2.webp" loading="lazy" decoding="async">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_3.webp" loading="lazy" decoding="async">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_4.webp" loading="lazy" decoding="async">
             </div>
             <div class="layout layout__row layout__row--equal">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_5.webp" loading="lazy">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_6.webp" loading="lazy">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_7.webp" loading="lazy">
-                <img class="image" src="/assets/projects/experimentalimagery/Final_8.webp" loading="lazy">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_5.webp" loading="lazy" decoding="async">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_6.webp" loading="lazy" decoding="async">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_7.webp" loading="lazy" decoding="async">
+                <img class="image" src="/assets/projects/experimentalimagery/Final_8.webp" loading="lazy" decoding="async">
             </div>
             <span class="image__action"></span>
             <span class="image__action-text"></span>
@@ -132,7 +132,7 @@
     <div class="content layout layout__column">
         <span class="section__title">Final Video</span>
         <div class="section__image">
-            <video src="/assets/projects/experimentalimagery/Final.mp4" class="image" loading="lazy" controls></video>
+            <video src="/assets/projects/experimentalimagery/Final.mp4" class="image" loading="lazy" decoding="async" controls></video>
         </div>
     </div>
 </section>
@@ -140,7 +140,7 @@
     <div class="content layout layout__column">
         <span class="section__title">Project Book</span>
         <div class="section__image" data-bind="click: showBookSlideshow">
-            <img class="image" src="/assets/projects/experimentalimagery/book/Experimental Imagery Final_0.webp" loading="lazy">
+            <img class="image" src="/assets/projects/experimentalimagery/book/Experimental Imagery Final_0.webp" loading="lazy" decoding="async">
             <span class="image__action"></span>
             <span class="image__action-text"></span>
         </div>
