--- a/UI/Pages/Items/Harmony/_Harmony.html
+++ b/UI/Pages/Items/Harmony/_Harmony.html
@@ -1,7 +1,7 @@
 <header class="section section--primary section--centered">
     <div class="content layout__column layout__column--ignoreMobile layout--small">
         <div class="section__title">
-            <img src="assets/projects/harmony/logo.svg" class="section__logo" width="200px" alt="Harmony Logo" loading="lazy">
+            <img src="assets/projects/harmony/logo.svg" class="section__logo" width="200px" alt="Harmony Logo" loading="lazy" decoding="async">
         </div>
         <h2 class="section__subtitle">An E-Commerce platform for the modern music industry</h2>
         <h3>This project is the outcome of <a href="https://www.iweb.co.uk/">iWeb</a>'s client briefing during an
@@ -16,7 +16,7 @@
             lifecycle of a project and its development - along with the client and our project supervisor, we
             agreed so that we would follow the steps outlined below:</p>
             <div class="section__image">
-                <img class="image no-shadow" src="/assets/projects/harmony/process.webp" loading="lazy">
+                <img class="image no-shadow" src="/assets/projects/harmony/process.webp" loading="lazy" decoding="async">
             </div>
         <p>Surrounding each of these stages we maintained communication both within our team, as well as with
             our project supervisor and the client.</p>
@@ -29,7 +29,7 @@
     <div class="content layout layout__column">
         <span class="section__title">Initial Designs</span>
         <div class="section__image" data-bind="click: showInitialDesignsSlideshow">
-            <img class="image" src="/assets/projects/harmony/initial-designs.webp" loading="lazy">
+            <img class="image" src="/assets/projects/harmony/initial-designs.webp" loading="lazy" decoding="async">
             <span class="image__action"></span>
             <span class="image__action-text"></span>
         </div>
@@ -48,7 +48,7 @@
         <div class="layout layout__row layout__row--equal">
             <div>
                 <div class="section__image" data-bind="click: showPrototypeSlideshow">
-                    <img class="image" src="/assets/projects/harmony/prototype-ui.webp" loading="lazy">
+                    <img class="image" src="/assets/projects/harmony/prototype-ui.webp" loading="lazy" decoding="async">
                     <span class="image__action"></span>
                     <span class="image__action-text"></span>
                 </div>
@@ -98,7 +98,7 @@
         <span class="section__title">Final Product</span>
         <a href="https://harmony.aylo.net/"><span class="section__subtitle">View Here</span></a>
         <div class="section__image" data-bind="click: showFinalSlideshow">
-            <img class="image" src="/assets/projects/harmony/final-product-1.webp" loading="lazy">
+            <img class="image" src="/assets/projects/harmony/final-product-1.webp" loading="lazy" decoding="async">
             <span class="image__action"></span>
             <span class="image__action-text"></span>
         </div>
