--- a/UI/Pages/Items/Pinewood/_Pinewood.html
+++ b/UI/Pages/Items/Pinewood/_Pinewood.html
@@ -1,7 +1,7 @@
 <header class="section section--primary section--centered">
     <div class="content layout__column layout__column--ignoreMobile layout--small">
         <div class="section__title">
-            <img src="/assets/projects/pinewood/logo.svg" class="section__logo" width="200px" alt="Pinewood Logo" loading="lazy">
+            <img src="/assets/projects/pinewood/logo.svg" class="section__logo" width="200px" alt="Pinewood Logo" loading="lazy" decoding="async">
         </div>
         <h2 class="section__subtitle">Software Development Placement @ <a
                 href="https://www.pinewood.co.uk/">Pinewood Technologies</a></h2>
@@ -90,7 +90,7 @@
     <div class="content content layout layout__column">
         <span class="section__title">UX Project Outcomes</span>
         <div class="section__image" data-bind="click: showOutcomesSlideshow">
-            <img class="image" src="/assets/projects/pinewood/dashboard-1.webp" loading="lazy">
+            <img class="image" src="/assets/projects/pinewood/dashboard-1.webp" loading="lazy" decoding="async">
             <span class="image__action"></span>
             <span class="image__action-text"></span>
         </div>
