Use Youtube for Video and fix view media button for final outcomes

--- a/UI/Pages/Items/ExperimentalImagery/_ExperimentalImagery.html
+++ b/UI/Pages/Items/ExperimentalImagery/_ExperimentalImagery.html
@@ -109,7 +109,7 @@
 <section class="section section--centered">
     <div class="content layout layout__column">
         <span class="section__title">Final Outcomes</span>
-        <div class="layout layout__column layout--nogap layout--small" data-bind="click: showFinalSlideshow">
+        <div class="section__image layout layout__column layout--nogap layout--small" data-bind="click: showFinalSlideshow">
             <div class="layout layout__row layout__row--equal">
                 <img class="image" src="/assets/projects/experimentalimagery/Final_1.webp" loading="lazy" decoding="async">
                 <img class="image" src="/assets/projects/experimentalimagery/Final_2.webp" loading="lazy" decoding="async">
@@ -131,8 +131,8 @@
 <section class="section section--secondary section--centered">
     <div class="content layout layout__column">
         <span class="section__title">Final Video</span>
-        <div class="section__image">
-            <video src="/assets/projects/experimentalimagery/Final.mp4" class="image" loading="lazy" decoding="async" controls></video>
+        <div class="section__video">
+            <iframe src="https://www.youtube.com/embed/Q9vkUjmVsRc" class="video" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </section>
