--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <title>Kieran Noble</title>
 </head>
 
