--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="preload" as="font" href="/fonts/brandon-grotesque-black.woff2" type="font/woff2" />
+  <link rel="preload" as="font" href="/fonts/Lato-Bold.ttf" type="font/ttf" />
+  <link rel="preload" as="font" href="/fonts/Lato-Regular.ttf" type="font/ttf" />
   <title>Kieran Noble</title>
 </head>
 
